# genai_hackathon

./: .gitignore  README.md  home.py  pyproject.toml  sample.env  streamlit_app.py
demo/: map_video.py
geo_to_speech/: generate_audio.py
geo_to_text/: cached_intros.json  generate_text.py
geo_to_video/: convert.py  convert.sh  generate_video.py  h264.txt  run.py
map_trials/: generate_audio.py  get_cool_landmark_descriptions.py  get_cool_landmark_pictures.py  get_landmarks.py
pages/: user_preference_input.py  walking_tour_stop1.py  walking_tour_stop2.py
services/: __init__.py
services/audio_gen/: audio_gen.py
services/gmaps/: __init__.py  gmaps.py
services/text_gen/: text_gen.py
services/visual_gen/: visual_gen.py
text_to_bgm/: background_music.py
