[tool.poetry]
name = "ll"
version = "0.1.0"
description = ""
authors = ["liamcollins <liam.collins@columbia.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
googlemaps = "^4.10.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
