[tool.poetry]
name = "ll"
version = "0.1.0"
description = ""
authors = ["liamcollins <liam.collins@columbia.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
